--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,59 @@
 .DS_Store
+/App.class
+/AppTest.class
+/GUI$1.class
+/GUI$2.class
+/GUI$3.class
+/GUI$4.class
+/GUI$5.class
+/GUI$6.class
+/GUI$7.class
+/GUI$8.class
+/GUI$9.class
+/GUI.class
+/GUITest.class
+/JTableCreate$1.class
+/JTableCreate.class
+/SortedGUI$1.class
+/SortedGUI$2.class
+/SortedGUI$3.class
+/SortedGUI$4.class
+/SortedGUI$5.class
+/SortedGUI$6.class
+/SortedGUI$7.class
+/SortedGUI$8.class
+/SortedGUI.class
+/admin$1.class
+/admin$10.class
+/admin$11.class
+/admin$12.class
+/admin$2.class
+/admin$3.class
+/admin$4.class
+/admin$5.class
+/admin$6.class
+/admin$7.class
+/admin$8.class
+/admin$9.class
+/admin.class
+/commentDriver$1.class
+/commentDriver$2.class
+/commentDriver$3.class
+/commentDriver.class
+/filterDriver$1.class
+/filterDriver$10.class
+/filterDriver$11.class
+/filterDriver$2.class
+/filterDriver$3.class
+/filterDriver$4.class
+/filterDriver$5.class
+/filterDriver$6.class
+/filterDriver$7.class
+/filterDriver$8.class
+/filterDriver$9.class
+/filterDriver.class
+/filterDriverTest.class
+/login$1.class
+/login$2.class
+/login$3.class
+/login.class
